fix example styles (for overflow on mobile

--- a/packages/cutie-example/src/App.css
+++ b/packages/cutie-example/src/App.css
@@ -324,16 +324,16 @@ h2 {
 
 .preview-area {
   flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background: #fafafa;
   overflow: auto;
+  display: flex;
+  min-height: 100%;
+  padding: 2rem;
 }
 
 .preview-card {
-  width: calc(100% - 4rem);
   padding: 2rem;
+  margin: auto;
   border-radius: 8px;
   border: 1px solid #ddd;
   background: #fff;
@@ -380,6 +380,7 @@ h2 {
   justify-content: center;
   text-align: center;
   padding: 4rem 2rem;
+  margin: auto;
   color: #666;
 }
 
